@@ -1,5 +1,5 @@
 <?php
-// $Id: views_module.test,v 1.1.2.2 2010-05-24 19:58:36 dereine Exp $
+// $Id: views_module.test,v 1.1.2.3 2010-12-17 21:51:42 dereine Exp $
 module_load_include('test', 'views', 'tests/views_query');
 class viewsModuleTest extends ViewsSqlTest {
   public static function getInfo() {
@@ -9,11 +9,11 @@ class viewsModuleTest extends ViewsSqlTest {
       'group' => 'Views',
     );
   }
-  
+
   public function setUp() {
     parent::setUp();
   }
-  
+
   public function test_views_trim_text() {
     // Test unicode, @see http://drupal.org/node/513396#comment-2839416
     $text = array(
@@ -58,12 +58,22 @@ class viewsModuleTest extends ViewsSqlTest {
       'сд асд',
       'асд асд',
     );
-    
+
     foreach ($text as $key => $line) {
       $result_text = views_trim_text($alter, $line);
-      debug($result_text);
-      debug($expect[$key]);
       $this->assertEqual($result_text, $expect[$key]);
     }
+  }
+  
+  /**
+   * Tests the dynamic includes of templates via module feature.
+   */
+  function testModuleTemplates() {
+    $views_status = variable_get('views_defaults', array());
+    $views_status['frontpage'] = FALSE; // false is enabled
+    variable_set('views_defaults', $views_status);
+
+    $registry = theme_get_registry();
+    $this->assertTrue(isset($registry['views_view__frontpage']));
   }
 }
