@@ -1,5 +1,5 @@
 <?php
-// $Id: views_test.module,v 1.1.2.7 2010-11-06 21:25:06 dereine Exp $
+// $Id: views_test.module,v 1.1.2.8 2010-12-17 21:51:42 dereine Exp $
 
 /**
  * Implements hook_permission().
@@ -19,6 +19,7 @@ function views_test_permission() {
 function views_test_views_api() {
   return array(
     'api' => '3.0-alpha1',
+    'template path' => drupal_get_path('module', 'views_test') . '/templates',
   );
 }
 
